--- a/UmbCheckout.StarterKit.Web/App_Plugins/Contentment/editors/data-picker.html
+++ b/UmbCheckout.StarterKit.Web/App_Plugins/Contentment/editors/data-picker.html
@@ -1,18 +1,17 @@
-<div ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
-    <contentment-items-editor ng-model="model.value"
+<div ng-class="vm.uniqueId" ng-controller="Umbraco.Community.Contentment.DataEditors.DataPicker.Controller as vm">
+    <umb-load-indicator ng-if="vm.loading === true"></umb-load-indicator>
+    <contentment-items-editor ng-if="vm.loading === false"
+                              ng-model="model.value"
                               add-button-label-key="vm.addButtonLabelKey"
                               allow-add="vm.allowAdd"
                               allow-edit="vm.allowEdit"
                               allow-remove="vm.allowRemove"
                               allow-sort="vm.allowSort"
+                              default-icon="vm.defaultIcon"
                               display-mode="vm.displayMode"
                               get-item="vm.populate"
                               on-add="vm.add"
-                              on-edit="vm.edit"
                               on-remove="vm.remove"
-                              on-sort="vm.sort"
-                              block-actions="vm.blockActions"
-                              property-actions="vm.propertyActions"
-                              previews="vm.previews">
+                              property-actions="vm.propertyActions">
     </contentment-items-editor>
 </div>
